--- a/00_Intro/intro.ipynb
+++ b/00_Intro/intro.ipynb
@@ -17,27 +17,27 @@
    "source": [
     "### Workflow\n",
     "\n",
-    "- Setup conda (python) environment\n",
+    "- Load conda (python) environment (```SETUP.md```)\n",
     "\n",
     "- Required files: probe, lattice\n",
     "\n",
-    "(01) Data generation\n",
+    "**(01)** Data generation\n",
     "\n",
-    "(02) Preprocess data before input into NN training scheme\n",
+    "**(02)** Preprocess data before input into NN training scheme\n",
     "\n",
-    "(03) Train NN on data, save NN with lowest validation loss, test on other simulated data\n",
+    "**(03)** Train NN on data, save NN with lowest validation loss, test on other simulated data\n",
     "\n",
-    "(04) Inference on experimental data\n",
+    "**(04)** Inference on experimental data\n",
     "\n",
-    "(05) Postprocessing the NN output data\n",
+    "**(05)** Postprocessing the NN output data\n",
     "\n",
-    "(06) Tomographic characterization\n",
+    "**(06)** Tomographic characterization\n",
     "\n",
-    "(07) Calculating performance metrics of network\n",
+    "**(07)** Calculating performance metrics of network\n",
     "\n",
-    "(08) Batch processing for pty-co-SAXSNN\n",
+    "**(08)** Batch processing for pty-co-SAXSNN\n",
     "\n",
-    "(09) Clathrate simulations (Triangular Bipyramid Particles)\n",
+    "**(09)** Clathrate simulations (Triangular Bipyramid Particles)\n",
     "\n"
    ]
   },
