--- a/05_Postprocessing/postprocess_for_matlab.ipynb
+++ b/05_Postprocessing/postprocess_for_matlab.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f39a8b59",
+   "metadata": {},
+   "source": [
+    "## Import necessary packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "b5096e2c",
@@ -37,8 +45,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1639a1d5",
+   "metadata": {},
+   "source": [
+    "## Read in experimental data and load model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "e4071cb5",
    "metadata": {},
    "outputs": [
@@ -79,8 +95,24 @@
     "model.eval()\n",
     "\n",
     "# Load mask\n",
-    "mask = np.load(mask_path)\n",
-    "\n",
+    "mask = np.load(mask_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1562b52",
+   "metadata": {},
+   "source": [
+    "## Set output h5 file and check for existing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f44c4f3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Output H5 file\n",
     "output_file = f'../example/05_Postprocessing/combined_diffraction_patterns_{scan_name}_{model_path.split(\"/\")[-1].split(\".\")[0]}.h5'\n",
     "print('output_file:', output_file)\n",
@@ -95,6 +127,14 @@
     "\n",
     "# Add delay parameter\n",
     "delay_between_scans = 0.1  # seconds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de54f79e",
+   "metadata": {},
+   "source": [
+    "## Process remaining scans sequentially"
    ]
   },
   {
@@ -182,6 +222,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44e6e846",
+   "metadata": {},
+   "source": [
+    "## Add metadata"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c66a461b",
@@ -215,7 +263,7 @@
    "id": "aa887561",
    "metadata": {},
    "source": [
-    "# Convert h5 to mat"
+    "## Convert h5 to mat"
    ]
   },
   {
@@ -703,6 +751,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fd37797",
+   "metadata": {},
+   "source": [
+    "## Convert file to format for blee SAXS4Assembly / SAXSimageviewer packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "ea9dcf22",
@@ -799,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "e5ef1c66",
    "metadata": {},
    "outputs": [
@@ -815,7 +871,7 @@
     }
    ],
    "source": [
-    "save_string"
+    "print(save_string)"
    ]
   },
   {
