--- a/01_Data_Generation/data_gen.ipynb
+++ b/01_Data_Generation/data_gen.ipynb
@@ -640,12 +640,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e73b084e",
+   "metadata": {},
+   "source": [
+    "## h5 ouput location"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "bba9397d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../example/01_Data_Generation/Lattice400_Typeclathrate_II_DP256_Sim256_Grid1024_nsteps4_nscans180_centerConc0.75_NoiseOn_Nc10000_tomo_Abs0_PhaseScl1.00_ZCB_9_3D_scan5065/sim_ZCB_9_3D_S5065_N180_steps4_dp256.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(h5_file)"
+   ]
   }
  ],
  "metadata": {
